# checky

backend/: .env  Cargo.toml  generate_models
backend/migrations/00000000000000_diesel_initial_setup/: down.sql
backend/migrations/2022-08-27-184632_users/: up.sql
backend/src/: insertable_models.rs  main.rs  models.rs  schema.rs
